--- a/ProyectoGrado/web/WEB-INF/web.xml
+++ b/ProyectoGrado/web/WEB-INF/web.xml
@@ -21,4 +21,135 @@
     <welcome-file-list>
         <welcome-file>faces/index.xhtml</welcome-file>
     </welcome-file-list>
+    <error-page>
+        <error-code>403</error-code>
+        <location>/permisoDenegado.xhtml</location>
+    </error-page>
+    <security-constraint>
+        <display-name>docentefaces</display-name>
+        <web-resource-collection>
+            <web-resource-name>folderdoc</web-resource-name>
+            <description/>
+            <url-pattern>/faces/docentes/*</url-pattern>
+            <url-pattern>/faces/indexDocentes.xhtml</url-pattern>
+            <url-pattern>/faces/actividades/*</url-pattern>
+            <url-pattern>/faces/productos/*</url-pattern>
+        </web-resource-collection>
+        <auth-constraint>
+            <description/>
+            <role-name>docente</role-name>
+        </auth-constraint>
+    </security-constraint>
+    <security-constraint>
+        <display-name>adminfaces</display-name>
+        <web-resource-collection>
+            <web-resource-name>index</web-resource-name>
+            <description/>
+            <url-pattern>/faces/indexAdmin.xhtml</url-pattern>
+        </web-resource-collection>
+        <web-resource-collection>
+            <web-resource-name>actvidades</web-resource-name>
+            <description/>
+            <url-pattern>/faces/actividades/*</url-pattern>
+        </web-resource-collection>
+        <web-resource-collection>
+            <web-resource-name>clases</web-resource-name>
+            <description/>
+            <url-pattern>/faces/clases/*</url-pattern>
+        </web-resource-collection>
+        <web-resource-collection>
+            <web-resource-name>convenciones</web-resource-name>
+            <description/>
+            <url-pattern>/faces/convenciones/*</url-pattern>
+        </web-resource-collection>
+        <web-resource-collection>
+            <web-resource-name>docentes</web-resource-name>
+            <description/>
+            <url-pattern>/faces/docentes/*</url-pattern>
+        </web-resource-collection>
+        <web-resource-collection>
+            <web-resource-name>evaluaciones</web-resource-name>
+            <description/>
+            <url-pattern>/faces/evaluaciones/*</url-pattern>
+        </web-resource-collection>
+        <web-resource-collection>
+            <web-resource-name>fechas_seguimientos</web-resource-name>
+            <description/>
+            <url-pattern>/faces/fechas_seguimientos/*</url-pattern>
+        </web-resource-collection>
+        <web-resource-collection>
+            <web-resource-name>horas</web-resource-name>
+            <description/>
+            <url-pattern>/faces/horas/*</url-pattern>
+        </web-resource-collection>
+        <web-resource-collection>
+            <web-resource-name>jornadas</web-resource-name>
+            <description/>
+            <url-pattern>/faces/jornadas/*</url-pattern>
+        </web-resource-collection>
+        <web-resource-collection>
+            <web-resource-name>productos</web-resource-name>
+            <description/>
+            <url-pattern>/faces/productos/*</url-pattern>
+        </web-resource-collection>
+        <web-resource-collection>
+            <web-resource-name>tipo_modal</web-resource-name>
+            <description/>
+            <url-pattern>/faces/tipo_mdalidad/*</url-pattern>
+        </web-resource-collection>
+        <auth-constraint>
+            <description/>
+            <role-name>administrador</role-name>
+        </auth-constraint>
+    </security-constraint>
+    <security-constraint>
+        <display-name>evafaces</display-name>
+        <web-resource-collection>
+            <web-resource-name>foldereva</web-resource-name>
+            <description/>
+            <url-pattern>/faces/evaluaciones/*</url-pattern>
+            <url-pattern>/faces/fechas_seguimientos/*</url-pattern>
+            <url-pattern>/faces/indexEvaluador.xhtml</url-pattern>
+        </web-resource-collection>
+        <auth-constraint>
+            <description/>
+            <role-name>evaluador</role-name>
+        </auth-constraint>
+    </security-constraint>
+    <security-constraint>
+        <display-name>mensafaces</display-name>
+        <web-resource-collection>
+            <web-resource-name>foldermensa</web-resource-name>
+            <description/>
+            <url-pattern>/faces/foldermensa/*</url-pattern>
+        </web-resource-collection>
+        <auth-constraint>
+            <description/>
+            <role-name>mensa</role-name>
+        </auth-constraint>
+    </security-constraint>
+    <login-config>
+        <auth-method>FORM</auth-method>
+        <realm-name>proyectoRealm</realm-name>
+        <form-login-config>
+            <form-login-page>/faces/index.xhtml</form-login-page>
+            <form-error-page>/faces/index.xhtml</form-error-page>
+        </form-login-config>
+    </login-config>
+    <security-role>
+        <description/>
+        <role-name>docente</role-name>
+    </security-role>
+    <security-role>
+        <description/>
+        <role-name>administrador</role-name>
+    </security-role>
+    <security-role>
+        <description/>
+        <role-name>evaluador</role-name>
+    </security-role>
+    <security-role>
+        <description/>
+        <role-name>mensa</role-name>
+    </security-role>
 </web-app>
