--- a/ProyectoGrado/nbproject/project.properties
+++ b/ProyectoGrado/nbproject/project.properties
@@ -30,7 +30,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
-file.reference.all-themes-1.0.10.jar=temas/all-themes-1.0.10.jar
+file.reference.all-themes-1.0.10.jar=web/WEB-INF/lib/all-themes-1.0.10.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
