--- a/ProyectoGrado/build.xml
+++ b/ProyectoGrado/build.xml
@@ -7,8 +7,8 @@
 <!-- the Compile on Save feature is turned off for the project. -->
 <!-- You can turn off the Compile on Save (or Deploy on Save) setting -->
 <!-- in the project's Project Properties dialog box.-->
-<project name="ProyectoGrado" default="default" basedir=".">
-    <description>Builds, tests, and runs the project ProyectoGrado.</description>
+<project name="ProyectoGrado_formato" default="default" basedir=".">
+    <description>Builds, tests, and runs the project ProyectoGrado_formato.</description>
     <import file="nbproject/build-impl.xml"/>
     <!--
 
