--- a/ProyectoGrado/nbproject/project.properties
+++ b/ProyectoGrado/nbproject/project.properties
@@ -31,6 +31,7 @@ endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
 file.reference.all-themes-1.0.10.jar=web/WEB-INF/lib/all-themes-1.0.10.jar
+file.reference.itextpdf-5.4.2.jar=web/WEB-INF/lib/itextpdf-5.4.2.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -46,7 +47,8 @@ j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
     ${libs.primefaces.classpath}:\
-    ${file.reference.all-themes-1.0.10.jar}
+    ${file.reference.all-themes-1.0.10.jar}:\
+    ${file.reference.itextpdf-5.4.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
