--- a/ProyectoGrado/nbproject/project.properties
+++ b/ProyectoGrado/nbproject/project.properties
@@ -1,6 +1,5 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=true
-annotation.processing.processor.options=-Aeclipselink.canonicalmodel.use_static_factory=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
@@ -14,15 +13,14 @@ build.test.classes.dir=${build.dir}/test/classes
 build.test.results.dir=${build.dir}/test/results
 build.web.dir=${build.dir}/web
 build.web.excludes=${build.classes.excludes}
+buildfile=nbbuild.xml
 client.urlPart=
 compile.jsps=false
-conf.dir=${source.root}/conf
+conf.dir=src/conf
 debug.classpath=${build.classes.dir}:${javac.classpath}
 debug.test.classpath=\
     ${run.test.classpath}
 display.browser=true
-# Files to be excluded from distribution war
-dist.archive.excludes=
 dist.dir=dist
 dist.ear.war=${dist.dir}/${war.ear.name}
 dist.javadoc.dir=${dist.dir}/javadoc
@@ -31,7 +29,21 @@ endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
 file.reference.all-themes-1.0.10.jar=web/WEB-INF/lib/all-themes-1.0.10.jar
+file.reference.bcmail-jdk14-136.jar=src/lib_jasperreport/bcmail-jdk14-136.jar
+file.reference.bcprov-jdk14-136.jar=src/lib_jasperreport/bcprov-jdk14-136.jar
+file.reference.commons-beanutils-1.8.0.jar=src/lib_jasperreport/commons-beanutils-1.8.0.jar
+file.reference.commons-collections-2.1.jar=src/lib_jasperreport/commons-collections-2.1.jar
+file.reference.commons-digester-1.7.jar=src/lib_jasperreport/commons-digester-1.7.jar
+file.reference.commons-logging-1.0.2.jar=src/lib_jasperreport/commons-logging-1.0.2.jar
+file.reference.itext-2.1.0.jar=src/lib_jasperreport/itext-2.1.0.jar
+file.reference.itextpdf-5.2.1.jar=web/WEB-INF/lib/itextpdf-5.2.1.jar
 file.reference.itextpdf-5.4.2.jar=web/WEB-INF/lib/itextpdf-5.4.2.jar
+file.reference.jasperreports-3.5.3.jar=src/lib_jasperreport/jasperreports-3.5.3.jar
+file.reference.jcommon-1.0.15.jar=src/lib_jasperreport/jcommon-1.0.15.jar
+file.reference.jdtcore-3.1.0.jar=src/lib_jasperreport/jdtcore-3.1.0.jar
+file.reference.jfreechart-1.0.12.jar=src/lib_jasperreport/jfreechart-1.0.12.jar
+file.reference.src-java=src/java
+file.reference.xml-apis-1.3.02.jar=src/lib_jasperreport/xml-apis-1.3.02.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -45,22 +57,30 @@ j2ee.platform.wsimport.classpath=${j2ee.server.home}/modules/webservices-osgi.ja
 j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
+java.source.based=true
 javac.classpath=\
-    ${libs.primefaces.classpath}:\
     ${file.reference.all-themes-1.0.10.jar}:\
-<<<<<<< HEAD
-    ${libs.JaspertReport.classpath}
-=======
-    ${file.reference.itextpdf-5.4.2.jar}
->>>>>>> 561c2952b05d0db7af5c6547581b4b01d02bf43d
+    ${file.reference.itextpdf-5.2.1.jar}:\
+    ${file.reference.itextpdf-5.4.2.jar}:\
+    ${libs.primefaces.classpath}:\
+    ${file.reference.bcmail-jdk14-136.jar}:\
+    ${file.reference.bcprov-jdk14-136.jar}:\
+    ${file.reference.commons-beanutils-1.8.0.jar}:\
+    ${file.reference.commons-collections-2.1.jar}:\
+    ${file.reference.commons-digester-1.7.jar}:\
+    ${file.reference.commons-logging-1.0.2.jar}:\
+    ${file.reference.itext-2.1.0.jar}:\
+    ${file.reference.jasperreports-3.5.3.jar}:\
+    ${file.reference.jcommon-1.0.15.jar}:\
+    ${file.reference.jdtcore-3.1.0.jar}:\
+    ${file.reference.jfreechart-1.0.12.jar}:\
+    ${file.reference.xml-apis-1.3.02.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
 javac.deprecation=false
 javac.processorpath=\
-    ${javac.classpath}:\
-    ${libs.eclipselink.classpath}:\
-    ${libs.eclipselinkmodelgen.classpath}
+    ${javac.classpath}
 javac.source=1.8
 javac.target=1.8
 javac.test.classpath=\
@@ -80,7 +100,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-lib.dir=${web.docbase.dir}/WEB-INF/lib
+lib.dir=web/WEB-INF/lib
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
 resource.dir=setup
@@ -91,11 +111,11 @@ run.test.classpath=\
 # (you may also define separate properties like run-sys-prop.name=value instead of -Dname=value):
 runmain.jvmargs=
 source.encoding=UTF-8
-source.root=src
-src.dir=${source.root}/java
-test.src.dir=test
+source.root=.
+src.dir=${file.reference.src-java}
+test.src.dir=
 war.content.additional=
 war.ear.name=${war.name}
-war.name=ProyectoGrado_formato.war
+war.name=ProyectoGrado.war
 web.docbase.dir=web
 webinf.dir=web/WEB-INF
