agregue el informe final del proyecto

--- a/ProyectoGrado/nbproject/project.properties
+++ b/ProyectoGrado/nbproject/project.properties
@@ -116,6 +116,6 @@ src.dir=${file.reference.src-java}
 test.src.dir=
 war.content.additional=
 war.ear.name=${war.name}
-war.name=ProyectoGrado.war
+war.name=ProyectoGrado_formato.war
 web.docbase.dir=web
 webinf.dir=web/WEB-INF
