--- a/ProyectoGrado/nbproject/project.properties
+++ b/ProyectoGrado/nbproject/project.properties
@@ -29,21 +29,9 @@ endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
 file.reference.all-themes-1.0.10.jar=web/WEB-INF/lib/all-themes-1.0.10.jar
-file.reference.bcmail-jdk14-136.jar=src/lib_jasperreport/bcmail-jdk14-136.jar
-file.reference.bcprov-jdk14-136.jar=src/lib_jasperreport/bcprov-jdk14-136.jar
-file.reference.commons-beanutils-1.8.0.jar=src/lib_jasperreport/commons-beanutils-1.8.0.jar
-file.reference.commons-collections-2.1.jar=src/lib_jasperreport/commons-collections-2.1.jar
-file.reference.commons-digester-1.7.jar=src/lib_jasperreport/commons-digester-1.7.jar
-file.reference.commons-logging-1.0.2.jar=src/lib_jasperreport/commons-logging-1.0.2.jar
-file.reference.itext-2.1.0.jar=src/lib_jasperreport/itext-2.1.0.jar
 file.reference.itextpdf-5.2.1.jar=web/WEB-INF/lib/itextpdf-5.2.1.jar
 file.reference.itextpdf-5.4.2.jar=web/WEB-INF/lib/itextpdf-5.4.2.jar
-file.reference.jasperreports-3.5.3.jar=src/lib_jasperreport/jasperreports-3.5.3.jar
-file.reference.jcommon-1.0.15.jar=src/lib_jasperreport/jcommon-1.0.15.jar
-file.reference.jdtcore-3.1.0.jar=src/lib_jasperreport/jdtcore-3.1.0.jar
-file.reference.jfreechart-1.0.12.jar=src/lib_jasperreport/jfreechart-1.0.12.jar
 file.reference.src-java=src/java
-file.reference.xml-apis-1.3.02.jar=src/lib_jasperreport/xml-apis-1.3.02.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -62,19 +50,7 @@ javac.classpath=\
     ${file.reference.all-themes-1.0.10.jar}:\
     ${file.reference.itextpdf-5.2.1.jar}:\
     ${file.reference.itextpdf-5.4.2.jar}:\
-    ${libs.primefaces.classpath}:\
-    ${file.reference.bcmail-jdk14-136.jar}:\
-    ${file.reference.bcprov-jdk14-136.jar}:\
-    ${file.reference.commons-beanutils-1.8.0.jar}:\
-    ${file.reference.commons-collections-2.1.jar}:\
-    ${file.reference.commons-digester-1.7.jar}:\
-    ${file.reference.commons-logging-1.0.2.jar}:\
-    ${file.reference.itext-2.1.0.jar}:\
-    ${file.reference.jasperreports-3.5.3.jar}:\
-    ${file.reference.jcommon-1.0.15.jar}:\
-    ${file.reference.jdtcore-3.1.0.jar}:\
-    ${file.reference.jfreechart-1.0.12.jar}:\
-    ${file.reference.xml-apis-1.3.02.jar}
+    ${libs.primefaces.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
