proyecto limpiado y listo para presentar

--- a/ProyectoGrado/src/java/com/proyecto/utilities/GeneralTxt.properties
+++ b/ProyectoGrado/src/java/com/proyecto/utilities/GeneralTxt.properties
@@ -9,3 +9,7 @@ error = Error
 msjErrorEntrada = Ocurrio un error al ingresar por favor verifique los datos
 bienvenidos = Bienvenido
 msjEntrada = Formato RDC-54
+cerrarsesion= Cerrar Sesi\u00f3n
+usuario= Usuario
+clave= Clave
+iniciarsesion = Iniciar Sesi\u00f3n
